--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -159,13 +159,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AnsiEscapeCodes.cpp" />
-    <ClCompile Include="Globals.cpp" />
-    <ClCompile Include="HelloTriangleApplication.cpp" />
+    <ClCompile Include="DebugManager.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HelloTriangleApplication.h" />
+    <ClInclude Include="AnsiEscapeCodes.h" />
+    <ClInclude Include="DebugManager.h" />
+    <ClInclude Include="Settings.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="QueueFamilyIndices.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
