--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
+    <ClCompile Include="VulkanLogicalDevice.cpp" />
+    <ClCompile Include="VulkanPhysicalDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnsiEscapeCodes.h" />
@@ -172,6 +174,8 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="QueueFamilyIndices.h" />
     <ClInclude Include="VulkanInstance.h" />
+    <ClInclude Include="VulkanLogicalDevice.h" />
+    <ClInclude Include="VulkanPhysicalDevice.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
