--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -168,14 +168,14 @@
     <ClCompile Include="VulkanPhysicalDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AnsiEscapeCodes.h" />
-    <ClInclude Include="DebugManager.h" />
-    <ClInclude Include="Settings.h" />
-    <ClInclude Include="Engine.h" />
-    <ClInclude Include="QueueFamilyIndices.h" />
-    <ClInclude Include="VulkanInstance.h" />
-    <ClInclude Include="VulkanLogicalDevice.h" />
-    <ClInclude Include="VulkanPhysicalDevice.h" />
+    <ClInclude Include="AnsiEscapeCodes.hxx" />
+    <ClInclude Include="DebugManager.hxx" />
+    <ClInclude Include="Settings.hxx" />
+    <ClInclude Include="Engine.hxx" />
+    <ClInclude Include="QueueFamilyIndices.hxx" />
+    <ClInclude Include="VulkanInstance.hxx" />
+    <ClInclude Include="VulkanLogicalDevice.hxx" />
+    <ClInclude Include="VulkanPhysicalDevice.hxx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
