--- a/VulkanTest/VulkanTest.vcxproj.filters
+++ b/VulkanTest/VulkanTest.vcxproj.filters
@@ -35,28 +35,28 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="QueueFamilyIndices.h">
+    <ClInclude Include="AnsiEscapeCodes.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AnsiEscapeCodes.h">
+    <ClInclude Include="DebugManager.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Settings.h">
+    <ClInclude Include="Engine.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DebugManager.h">
+    <ClInclude Include="QueueFamilyIndices.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Engine.h">
+    <ClInclude Include="Settings.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="VulkanInstance.h">
+    <ClInclude Include="VulkanInstance.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="VulkanPhysicalDevice.h">
+    <ClInclude Include="VulkanLogicalDevice.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="VulkanLogicalDevice.h">
+    <ClInclude Include="VulkanPhysicalDevice.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
