--- a/VulkanTest/VulkanTest.vcxproj.filters
+++ b/VulkanTest/VulkanTest.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="VulkanPhysicalDevice.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SwapChainSupportDetails.hxx">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
