--- a/VulkanTest/VulkanTest.vcxproj.filters
+++ b/VulkanTest/VulkanTest.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="VulkanFrameBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VulkanCommandBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnsiEscapeCodes.hxx">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VulkanFrameBuffer.hxx">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanCommandBuffer.hxx">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
